# bevy_boost

./: Cargo.toml
_resources/: main.blend
assets/: floor.glb  floor.gltf  landing_pad.glb  landing_pad.gltf  launch_pad.glb  launch_pad.gltf  rocket.glb  rocket.gltf  rocket_collider.gltf
assets/2_level/: obstacle.gltf
assets/3_level/: obstacle.glb  obstacle.gltf
src/: assets_loader.rs  collision.rs  level.rs  main.rs  player.rs  sounds.rs
src/level/: tween_move.rs
