[package]
name = "boost"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher"] }
bevy-inspector-egui = "0.32.0"
bevy_egui = "0.35.1"
leafwing-input-manager = "0.17.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
